--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   image_picker: ^1.1.2
   flutter_dotenv: ^5.2.1
   mime: ^2.0.0
+  localization: ^2.1.1
 
 dev_dependencies:
   flutter_test:
