--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   localization: ^2.1.1
   shared_preferences: ^2.5.2
   intl: ^0.19.0
+  translator: ^1.0.3+1
 
 dev_dependencies:
   flutter_test:
