--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   shared_preferences: ^2.5.2
   intl: ^0.19.0
   translator: ^1.0.3+1
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
