--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,10 @@ dependencies:
   intl: ^0.19.0
   translator: ^1.0.3+1
   google_fonts: ^6.2.1
+  firebase_core: ^3.12.0
+  firebase_auth: ^5.5.0
+  google_sign_in: ^6.2.2
+  cloud_firestore: ^5.6.4
 
 dev_dependencies:
   flutter_test:
