--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,11 @@ dependencies:
   supabase_flutter: ^2.8.3
   cached_network: ^2.1.0
   cached_network_image: ^3.4.1
+  photo_view: ^0.15.0
+  flutter_pdfview: ^1.4.0
+  flutter_inappwebview: ^6.1.5
+  url_launcher: ^6.3.1
+  pdfx: ^2.8.0
 
 dev_dependencies:
   flutter_test:
