--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,8 @@ dependencies:
   flutter_inappwebview: ^6.1.5
   url_launcher: ^6.3.1
   pdfx: ^2.8.0
+  flutter_tts: ^4.2.2
+  connectivity_plus: ^6.1.3
 
 dev_dependencies:
   flutter_test:
