--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,8 @@ dependencies:
   flutter_tts: ^4.2.2
   connectivity_plus: ^6.1.3
   provider: ^6.1.2
+  pdf: ^3.11.3
+  share_plus: ^10.1.4
 
   
 dev_dependencies:
